# ros2_android_cpp

./: CMakeLists.txt  README.md  mag_measure.py  package.xml  std_dev_mag.txt  std_dev_mag_mekaworks_phone.txt
include/: gps_spitter.h
src/: gps_spitter.cpp  main.cpp
