<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_sensors_qt512_ndk19</name>
  <version>0.0.1</version>
  <description>
      android sensors with qt and ros2
  </description>

  <maintainer email="john.connolly@mekaworks.com">John Connolly</maintainer>

  <license>BSD, Apache 2.0</license>

  <author>John C</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
